--- a/components/layouts/default.html
+++ b/components/layouts/default.html
@@ -29,10 +29,9 @@
 			<div class="navbar">
 			<a href="#main"><img src="./builds/dev/img/minframeLogoInverse.png" alt="minframe Logo"></a>
 			<i onClick="slideIn()" class="fa fa-bars"></i>
-			<ul>
-				
+			<ul id="menu">				
 				<li><a href="#getStarted">Get Started</a></li>
-				<li><a href="#">Tutorial</a></li>
+				<li><a href="tutorial.html">Tutorial</a></li>
 				<li><a href="https://github.com/joshboyan/minframe" target="_blank">Github</a></li>
 				<li><a href="#">npm</a></li>
 				<li><a href="#contact">Contact</a></li>
@@ -52,10 +51,10 @@
 
 	<footer>
 		<div class="col5">
-			<p>Hi! I'm Josh, a web designer and developer out of Portland, OR. I built minframe to help others build websites quickly and easily. If you need something more complicated I would be happy to build it for you, just use the form <span class="mobileFormPosition">below </span><span class="tabletFormPosition">to the right </span>to tell me about your project. Any issues should be submitted to the <a href="https://github.com/joshboyan/minframe/issues" target="_blank">GitHub repo</a>.</p>
+			<p>Hi! I'm Josh, a web designer and developer out of Portland, OR. I built minframe to help others build websites quickly and easily. It is under the MIT liscense so feel free to alter and customize it in any way. If you need something more complicated I would be happy to build it for you, just use the form <span class="mobileFormPosition">below </span><span class="tabletFormPosition">to the right </span>to tell me about your project. Any issues should be submitted to the&nbsp;<a href="https://github.com/joshboyan/minframe/issues" target="_blank">GitHub&nbsp;repo</a>.</p>
 		</div>
 		<div class="col2">
-			<img src="./builds/dev/img/profile.jpg" alt="Josh">
+			<img src="./builds/dev/img/profile.jpg" alt="Josh Boyan">
 			<ul>
 				<li><a href="https://www.linkedin.com/in/joshboyan" target="_blank"><i title="LinkedIn" class="fa fa-linkedin"></i></a></li>
 				<li><a href="https://github.com/joshboyan" target="_blank"><i title="GitHub" class="fa fa-github"></i></a></li>
@@ -87,5 +86,6 @@
 	</footer>
 <!-- inject:js -->
 <!-- endinject -->
+
 </body>
 </html>
