--- a/components/pages/index.html
+++ b/components/pages/index.html
@@ -11,62 +11,62 @@ description: minframe is a modern HTML5, mobile-first front-end framework built 
 <main id="main">
 <h1><strong>min</strong>imal responsive front-end <strong>frame</strong>work</h1>
 <section id="summary">
-	<p>minframe is a modern HTML5, mobile-first front-end framework built with Sass and Gulp on a 12 column responsive grid. The framework boasts all of the modern accessiblility features and tools developers use in builds but none of the style bloat. The only boilerplate styling is normalize.scss, our 12 column responsive grid and basic HTML5 Sass nesting. Javascript is only required during the build process, not in the browser.</p>
+	<p>minframe is a modern HTML5, mobile-first front-end framework built with Sass and Gulp on a 12 column responsive grid. The framework boasts all of the modern accessiblility features and tools developers use in builds but none of the style bloat. The only boilerplate styling is normalize.scss, our 12 column responsive grid and basic HTML5 Sass nesting. Javascript is only required during the build process, not in&nbsp;the&nbsp;browser.</p>
 </section><!--/#summary-->
 <section id="automatedTools">
 <h2>Automated Development Tools</h2>
 <div class="col6">
 		<i class="fa fa-table"></i>
 		<hr>
-		<p>Responsive grid built on Sass preprocessor is automatically compiled, concataneted, minified and autprefixed along with your custom styles to support legacy browsers.</p>
+		<p>Responsive grid built on Sass preprocessor is automatically compiled, concataneted, minified and autprefixed along with your custom styles to support&nbsp;legacy&nbsp;browsers.</p>
 	</div>
 	<div class="col6">
 		<i class="fa fa-file-code-o"></i>
 		<hr>
-		<p>Panini templating ensures you <em><span>D</span>on't <span>R</span>epeat <span>Y</span>ourself</em> by creating reusable head, header and footer layouts templates to combine with the pages unique body content.</p>
+		<p>Panini templating ensures you <em><span>D</span>on't <span>R</span>epeat <span>Y</span>ourself</em> by creating reusable head, header and footer layouts templates to combine with the pages unique&nbsp;body&nbsp;content.</p>
 		
 	</div>
 	<div class="col6">
 		<i class="fa fa-desktop"></i>
 		<hr>
-		<p>BrowserSync Live Reload and device testing built right in.</p>
+		<p>BrowserSync Live Reload and device testing built&nbsp;right&nbsp;in.</p>
 	</div>
 	
 	<div class="col6">
 		<i class="fa fa-cogs"></i>
 		<hr>
-		<p>Gulp.js task runner to streamline and automate your workflow.</p>
+		<p>Gulp.js task runner to streamline and automate&nbsp;your&nbsp;workflow.</p>
 	</div>
 	
 	<div class="col6">
 		<i class="fa fa-paper-plane-o"></i>
 		<hr>
-		<p>Server side PHP5 form validation, sanitation and email processing.</p>
+		<p>Server side PHP5 form validation, sanitation and&nbsp;email&nbsp;processing.</p>
 	</div>
 	<div class="col6">
 		<i class="fa fa-check-square-o"></i>
 		<hr>
-		<p>Use the lastest ES6 syntax with Babeljs, automatically check quality with jsHint then compile, concatenate and minify with Uglifyjs.</p>
+		<p>Use the lastest ES6 syntax with Babeljs, automatically check quality with jsHint then compile, concatenate and minify&nbsp;with&nbsp;Uglifyjs.</p>
 	</div>
 	<div class="col6">
 		<i class="fa fa-map-o"></i>
 		<hr>
-		<p>Automatically generate and update sitemaps.</p>
+		<p>Automatically generate and update&nbsp;sitemaps.</p>
 	</div>
 
 	<div class="col6">
 		<i class="fa fa-tachometer"></i>
 		<hr>
-		<p>.htaccess file fine-tuned by the pros at Google.</p>
+		<p>.htaccess file fine-tuned by the pros&nbsp;at&nbsp;Google.</p>
 	</div>
 	<div class="section">
-		<h4>No redundant styles to overwrite.</h4>
-		<h3>Minimal File Bloat, Maximum Development Power.</h3>
+		<h4>No redundant styles to&nbsp;overwrite.</h4>
+		<h3>Minimal File Bloat, Maximum Development&nbsp;Power.</h3>
 	</div>
 </section><!--/#automatedTools-->
 <section id="theGrid">
 	<h2>The Grid</h2>
-	<p>The Minimal Frameworks Responsive Grid is a 12 column, mobile-first design that scales up to fit all viewports. All columns are 100% width by default until 768px. It is built with Sass mixins eliminating much of the <code>div="class class class"</code> markup that polutes the HTML files of other frameworks. The <code>section</code> tag itself defines horizontal sections and clears floats much like <code>div class="row"</code> in Bootstrap. You also have the option of using <code>div class="section"</code> if that makes more semeantic sense. Columns only require one class <code>col#</code> where <code>#</code> is how many units out of twelve the column spans. Go ahead, resize your browser.</p>
+	<p>The Minimal Frameworks Responsive Grid is a 12 column, mobile-first design that scales up to fit all viewports. All columns are 100% width by default until 768px. It is built with Sass mixins eliminating much of the <code>div="class class class"</code> markup that polutes the HTML files of other frameworks. The <code>section</code> tag itself defines horizontal sections and clears floats much like <code>div class="row"</code> in Bootstrap. You also have the option of using <code>div class="section"</code> if that makes more semeantic sense. Columns only require one class <code>col#</code> where <code>#</code> is how many units out of twelve the column spans. Go ahead, resize&nbsp;your&nbsp;browser.</p>
 	<p>.section</p>
 	<div class="section">
 	<div class="col1">
@@ -192,7 +192,7 @@ description: minframe is a modern HTML5, mobile-first front-end framework built 
 </section><!--/#theGrid-->
 <section id="templating">
 	<h2><em>DRY</em> Reusable Templates</h2>
-	<p><em>D</em>on't <em>R</em>epeat <em>Y</em>ourself! Zurb's Panini flat file compiler allows us to create pages with consistent reusable layouts and partials. Only write your head, header, navigation and footer one time and reuse it across all of your pages. Only make edits once to change your entire site. If you need multiple layouts, just create them and call which one you would like to use in the Front Matter header on each page.</p>
+	<p><em>D</em>on't <em>R</em>epeat <em>Y</em>ourself! Zurb's Panini flat file compiler allows us to create pages with consistent reusable layouts and partials. Only write your head, header, navigation and footer one time and reuse it across all of your pages. Only make edits once to change your entire site. If you need multiple layouts, just create them and call which one you would like to use in the Front Matter header on&nbsp;each&nbsp;page.</p>
 	<div class="col6">
 		<h4>Front Matter Markup</h4>
 		<p>Top of each unique page(&darr;index.html&darr;)</p>
@@ -229,10 +229,10 @@ description: minframe is a modern HTML5, mobile-first front-end framework built 
 	<div class="col6">
 	<h4>NPM</h4>
 	<ol>
-		<li>Open your terminal and navigate to where you would like to download the package.<br>
+		<li>Open your terminal and navigate to where you would like to download the&nbsp;package.<br>
 			<code>npm install minframe</code>
 		</li>
-		<li>Change directories into the package you just installed.<br>
+		<li>Change directories into the package you just&nbsp;installed.<br>
 			<code>cd minframe</code>
 		</li>
 		<li>Install the node_module dependencies.<br>
@@ -241,7 +241,7 @@ description: minframe is a modern HTML5, mobile-first front-end framework built 
 		<li>Start up the automated build and open chrome with Live Reload.<br>
 			<code>gulp</code>
 		</li>
-		<li>Open _components_ folder with your favorite text editor and create HTML markup in _layouts_ and _pages_, add your Sass styles to _scss_ and JavaScript to _js_.</li>
+		<li>Open _components_ folder with your favorite text editor and create HTML markup in _layouts_ and _pages_, add your Sass styles to _scss_ and JavaScript&nbsp;to&nbsp;_js_.</li>
 		<li>When you are finished, create your distribution build.<br>
 			<code>gulp dist</code>
 		</li>
@@ -250,26 +250,26 @@ description: minframe is a modern HTML5, mobile-first front-end framework built 
 	<div class="col6">
 	<h4>Git CLI</h4>
 	<ol>
-		<li>Clone the repo to your local machine from your terminal.<br><code>git clone https://github.com/joshboyan/minframe.git</code></li>
-		<li>Change directories into the repo you just cloned.<br>
+		<li>Clone the repo to your local machine from your&nbsp;terminal.<br><code>git clone https://github.com/joshboyan/minframe.git</code></li>
+		<li>Change directories into the repo you just&nbsp;cloned.<br>
 			<code>cd minframe</code>
 		</li>
 		<li>Install the node_module dependencies.<br>
 			<code>npm install</code>
 		</li>
-		<li>Start up the automated build and open chrome with Live Reload.<br>
+		<li>Start up the automated build and open chrome with Live&nbsp;Reload.<br>
 			<code>gulp</code>
 		</li>
 		<li>Open _components_ folder with your favorite text editor and create HTML markup in _layouts_ and _pages_, add your Sass styles to _scss_ and JavaScript to _js_.</li>
-		<li>When you are finished, create your distribution build.<br>
+		<li>When you are finished, create your&nbsp;distribution&nbsp;build.<br>
 			<code>gulp dist</code>
 		</li>
 	</ol>
 	</div>
 	<h4>Git GUI</h4>
-	<p>You can clone minframe using the <a href="https://github.com/joshboyan/minframe" target="_blank"><i class="fa fa-github"></i>GitHub GUI</a> but you will need to use your command line interface to work with minframe.</p>
+	<p>You can clone minframe using the <a href="https://github.com/joshboyan/minframe" target="_blank"><i class="fa fa-github"></i>GitHub GUI</a> but you will need to use your command line interface to work&nbsp;with&nbsp;minframe.</p>
 	<hr>
-	<p>Need a little more instruction to get started? Check out the <a href="#">minframe front-end framework tutorial!</a></p>	
+	<p>Need a little more instruction to get started? Check out the <a href="#">minframe&nbsp;front-end&nbsp;framework&nbsp;tutorial!</a></p>	
 </section><!--/#getStarted-->
 
 </main>
