--- a/components/sass/styles.scss
+++ b/components/sass/styles.scss
@@ -53,7 +53,7 @@ html {
                     list-style-type: none;
                     background-color: $color2;
                     width: 100%;
-                    height: 100vh;
+                    height: 120vh;
                     right: -120vw;
                     top: -10vh;
                     transition: 1s;
@@ -102,9 +102,7 @@ html {
                     border: 1px solid $color2;
                     margin-bottom: 1rem;
                 }
-                p {
-                    text-align: left;
-                }
+                
             }
             #theGrid {
                 code {
@@ -167,6 +165,9 @@ html {
                 }
             }
             #getStarted {
+                li {
+                    padding-bottom: 1rem;
+                }
                 code {
                     @include code;
                 }
