Ensure dist/ displays properly

--- a/components/layouts/default.html
+++ b/components/layouts/default.html
@@ -12,10 +12,10 @@
 	<meta property="og:image" content="{{image}}" />
 	<meta property="og:description" content="{{description}}" />
 	<title>{{title}}</title>
-	<link rel="icon" type="image/png" href="./builds/dev/img/favicon.png">
+	<link rel="icon" type="image/png" href="./img/favicon.png">
 	<link rel="icon" type="image/ico" href="img/logo.ico">
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css" rel="stylesheet">
-	
+	<link href="./builds/dev/css/styles.css" rel="stylesheet">
 	<!-- inject:css -->
   	<!-- endinject -->
 	<!--[if lt IE 9]>
@@ -27,11 +27,11 @@
 		<a href="#main" class="sr-only">Skip to content</a>
 		<nav>
 			<div class="navbar">
-			<a href="#main"><img src="./builds/dev/img/minframeLogoInverse.png" alt="minframe Logo"></a>
+			<a href="./builds/dev/index.html"><img src="./builds/dev/img/minframeLogoInverse.png" alt="minframe Logo"></a>
 			<i onClick="slideIn()" class="fa fa-bars"></i>
 			<ul id="menu">				
 				<li><a href="#getStarted">Get Started</a></li>
-				<li><a href="tutorial.html">Tutorial</a></li>
+				<li><a href="./builds/dev/tutorial.html">Tutorial</a></li>
 				<li><a href="https://github.com/joshboyan/minframe" target="_blank">Github</a></li>
 				<li><a href="#">npm</a></li>
 				<li><a href="#contact">Contact</a></li>
@@ -40,7 +40,7 @@
 			<ul id="mobileMenu">
 				<li><i onClick="slideOut()" class="fa fa-times"></i></li>
 				<li><a onClick="slideOut()" href="#getStarted">Get Started</a></li>
-				<li><a href="#">Tutorial</a></li>
+				<li><a href="./builds/dev/tutorial.html">Tutorial</a></li>
 				<li><a href="https://github.com/joshboyan/minframe" target="_blank">Github</a></li>
 				<li><a href="#">npm</a></li>
 				<li><a onClick="slideOut()" href="#contact">Contact</a></li>
