--- a/components/pages/tutorial.html
+++ b/components/pages/tutorial.html
@@ -11,7 +11,52 @@ description: This tutorial is a step by step, basic introduction to minframe, fr
 <h1><strong>min</strong>imal <strong>frame</strong>work Tutorial</h1>
 <h2>A basic introduction to minframe, front end frameworks and build tools</h2>
 <section id="summary">
-	<p>minframe is a modern HTML5, mobile-first front-end framework built with Sass and Gulp on a 12 column responsive grid. The framework boasts all of the modern accessiblility features and tools developers use in builds but none of the style bloat. The only boilerplate styling is normalize.scss, our 12 column responsive grid and basic HTML5 Sass nesting. Javascript is only required during the build process, not in&nbsp;the&nbsp;browser.</p>
+	<p></p>
 </section><!--/#summary-->
+<section id="getStarted">	
+	<h2>Get Started</h2>
+	<div class="col6">
+	<h4>NPM</h4>
+	<ol>
+		<li>Open your terminal and navigate to where you would like to download the&nbsp;package.<br>
+			<code>npm install minframe</code>
+		</li>
+		<li>Change directories into the package you just&nbsp;installed.<br>
+			<code>cd minframe</code>
+		</li>
+		<li>Install the node_module dependencies.<br>
+			<code>npm install</code>
+		</li>
+		<li>Start up the automated build and open chrome with Live Reload.<br>
+			<code>gulp</code>
+		</li>
+		<li>Open _components_ folder with your favorite text editor and create HTML markup in _layouts_ and _pages_, add your Sass styles to _scss_ and JavaScript&nbsp;to&nbsp;_js_.</li>
+		<li>When you are finished, create your distribution build.<br>
+			<code>gulp dist</code>
+		</li>
+	</ol>
+	</div>
+	<div class="col6">
+	<h4>Git CLI</h4>
+	<ol>
+		<li>Clone the repo to your local machine from your&nbsp;terminal.<br><code>git clone https://github.com/joshboyan/minframe.git</code></li>
+		<li>Change directories into the repo you just&nbsp;cloned.<br>
+			<code>cd minframe</code>
+		</li>
+		<li>Install the node_module dependencies.<br>
+			<code>npm install</code>
+		</li>
+		<li>Start up the automated build and open chrome with Live&nbsp;Reload.<br>
+			<code>gulp</code>
+		</li>
+		<li>Open _components_ folder with your favorite text editor and create HTML markup in _layouts_ and _pages_, add your Sass styles to _scss_ and JavaScript to _js_.</li>
+		<li>When you are finished, create your&nbsp;distribution&nbsp;build.<br>
+			<code>gulp dist</code>
+		</li>
+	</ol>
+	</div>
+	<h4>Git GUI</h4>
+	<p>You can clone minframe using the <a href="https://github.com/joshboyan/minframe" target="_blank"><i class="fa fa-github"></i>GitHub GUI</a> but you will need to use your command line interface to work&nbsp;with&nbsp;minframe.</p>
+</section><!--/#getStarted-->
 
 </main>
