--- a/components/sass/styles.scss
+++ b/components/sass/styles.scss
@@ -80,7 +80,7 @@ html {
             h2,
             h3,
             h4 {
-                margin-top: 3.375rem;
+                margin: 3.375 auto 0 auto;
                 text-align: center;
             }
             h1 strong {
