Start marking up tutorials.html

--- a/components/pages/index.html
+++ b/components/pages/index.html
@@ -269,7 +269,7 @@ description: minframe is a modern HTML5, mobile-first front-end framework built 
 	<h4>Git GUI</h4>
 	<p>You can clone minframe using the <a href="https://github.com/joshboyan/minframe" target="_blank"><i class="fa fa-github"></i>GitHub GUI</a> but you will need to use your command line interface to work&nbsp;with&nbsp;minframe.</p>
 	<hr>
-	<p>Need a little more instruction to get started? Check out the <a href="./builds/dev/tutorial.html">minframe&nbsp;front-end&nbsp;framework&nbsp;tutorial!</a></p>	
+	<p>Need a little more instruction to get started? Check out the <a href="%tutorial.html">minframe&nbsp;front-end&nbsp;framework&nbsp;tutorial!</a></p>	
 </section><!--/#getStarted-->
 
 </main>
