--- a/components/layouts/default.html
+++ b/components/layouts/default.html
@@ -15,9 +15,7 @@
 	<link rel="icon" type="image/png" href="./img/favicon.png">
 	<link rel="icon" type="image/ico" href="img/logo.ico">
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css" rel="stylesheet">
-	<link href="./builds/dev/css/styles.css" rel="stylesheet">
-	<!-- inject:css -->
-  	<!-- endinject -->
+	<link href="%css/styles.css" rel="stylesheet">
 	<!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
@@ -27,11 +25,11 @@
 		<a href="#main" class="sr-only">Skip to content</a>
 		<nav>
 			<div class="navbar">
-			<a href="./builds/dev/index.html"><img src="./builds/dev/img/minframeLogoInverse.png" alt="minframe Logo"></a>
+			<a href="%index.html"><img src="%img/minframeLogoInverse.png" alt="minframe Logo"></a>
 			<i onClick="slideIn()" class="fa fa-bars"></i>
 			<ul id="menu">				
 				<li><a href="#getStarted">Get Started</a></li>
-				<li><a href="./builds/dev/tutorial.html">Tutorial</a></li>
+				<li><a href="%tutorial.html">Tutorial</a></li>
 				<li><a href="https://github.com/joshboyan/minframe" target="_blank">Github</a></li>
 				<li><a href="#">npm</a></li>
 				<li><a href="#contact">Contact</a></li>
@@ -40,7 +38,7 @@
 			<ul id="mobileMenu">
 				<li><i onClick="slideOut()" class="fa fa-times"></i></li>
 				<li><a onClick="slideOut()" href="#getStarted">Get Started</a></li>
-				<li><a href="./builds/dev/tutorial.html">Tutorial</a></li>
+				<li><a href="%tutorial.html">Tutorial</a></li>
 				<li><a href="https://github.com/joshboyan/minframe" target="_blank">Github</a></li>
 				<li><a href="#">npm</a></li>
 				<li><a onClick="slideOut()" href="#contact">Contact</a></li>
@@ -54,7 +52,7 @@
 			<p>Hi! I'm Josh, a web designer and developer out of Portland, OR. I built minframe to help others build websites quickly and easily. It is under the MIT liscense so feel free to alter and customize it in any way. If you need something more complicated I would be happy to build it for you, just use the form <span class="mobileFormPosition">below </span><span class="tabletFormPosition">to the right </span>to tell me about your project. Any issues should be submitted to the&nbsp;<a href="https://github.com/joshboyan/minframe/issues" target="_blank">GitHub&nbsp;repo</a>.</p>
 		</div>
 		<div class="col2">
-			<img src="./builds/dev/img/profile.jpg" alt="Josh Boyan">
+			<img src="%img/profile.jpg" alt="Josh Boyan">
 			<ul>
 				<li><a href="https://www.linkedin.com/in/joshboyan" target="_blank"><i title="LinkedIn" class="fa fa-linkedin"></i></a></li>
 				<li><a href="https://github.com/joshboyan" target="_blank"><i title="GitHub" class="fa fa-github"></i></a></li>
@@ -84,8 +82,6 @@
 			<a href="#main"><i aria-label="Back to Top" class="fa fa-angle-double-up"></i></a>
 		</section><!--/#copy-->
 	</footer>
-<!-- inject:js -->
-<!-- endinject -->
-
+	<script src="%js/scripts.js"></script>
 </body>
 </html>
