--- a/components/sass/styles.scss
+++ b/components/sass/styles.scss
@@ -8,10 +8,30 @@ html {
     line-height: 1.5;
     body {
         width: 100%;
-        p {
-            width: 80%;
+
+        h1,
+        h2,
+        h3,
+        h4 {
+            margin: 3.375 auto 0 auto;
             text-align: center;
+        }
+        h1 strong {
+            font-size: 2.75rem;
+        }
+        a {
+            color: $color2;
+        }
+        p {
+            width: 90%;
+            text-align: justify;
             margin: 0 auto 1.5rem auto;
+        }
+        code {
+            font: .75rem/1.5 monospace;
+            background-color: $color4;
+            border: 2px solid $color3;
+            border-radius: 4px;
         }
         header {
             overflow: hidden;
@@ -76,16 +96,7 @@ html {
         main {
             overflow: hidden;
             margin-top: 3.375rem;
-            h1,
-            h2,
-            h3,
-            h4 {
-                margin: 3.375 auto 0 auto;
-                text-align: center;
-            }
-            h1 strong {
-                font-size: 2.75rem;
-            }
+            
             #automatedTools {
                 span {
                     text-decoration: underline;
@@ -105,9 +116,7 @@ html {
                 
             }
             #theGrid {
-                code {
-                    @include code;
-                }
+            
                 p:nth-of-type(2) {
                     position: relative;
                     width: 10%;
@@ -132,8 +141,7 @@ html {
                 .col9,
                 .col10,
                 .col11,
-                .col12,
-                {
+                .col12 {
                     background-color: blue;
                     p {
                         text-align: center;
@@ -155,7 +163,6 @@ html {
                     width: 90%;
                     margin: 0 2.5%;
                     padding: 2.5%;
-                    @include code;
                 }
                 .col6:nth-of-type(1) div {
                     margin-top: 3rem;
@@ -167,9 +174,6 @@ html {
             #getStarted {
                 li {
                     padding-bottom: 1rem;
-                }
-                code {
-                    @include code;
                 }
                 hr {
                     width: 80%;
@@ -186,11 +190,69 @@ html {
                 }
             }
         }
+            //tutorial.html styles
+            aside {
+                display: none;
+            }
+            #getStartedTutorial {
+                li {
+                    padding-bottom: 1rem;
+                }
+                hr {
+                    width: 80%;
+                    margin: 2.25rem auto;
+                }
+                p:last-of-type {
+                    margin-bottom: 2.25rem;
+                }
+                img {
+                    width: 90%;
+                    margin: 0 5% 1.5rem 5%;
+                }
+                .col6:nth-of-type(4) {
+                    margin-top: -5.063rem;
+                }
+            }
+            #fileStructure {
+                img {
+                    width: 100%;
+                }
+            }
+            #tutorialGrid {
+                li {
+                    list-style-type:none;
+                }
+                .col1,
+                .col2,
+                .col3,
+                .col4,
+                .col5,
+                .col6,
+                .col7,
+                .col8,
+                .col9,
+                .col10,
+                .col11,
+                .col12 {
+                    background-color: blue;
+                    p {
+                        text-align: center;
+                        padding: 1rem 0;
+                    }
+                }
+                 
+            }
+            #wrapUp {
+
+            }
+        
         footer {
+            position: relative;
             overflow: hidden;
             color: $color1;
             background-color: $color2;
             padding-top: 2.25rem;
+            z-index: 400;
             img {
                 width: 80%;
                 margin: 1.5rem 10%;
@@ -288,6 +350,12 @@ html {
     html {
         font-size: 20px;
         body {
+            section {
+                margin-bottom: 2.5rem; 
+            }
+            p {
+                width: 80%;
+            }
             header {
                 nav {
                     .navbar {
@@ -299,6 +367,36 @@ html {
                         }
                     }
                 }
+            }
+            //tutorial.html styles
+            aside {
+                    display: block;
+                    position: fixed;
+                    float: left;
+                    margin-top: 4rem;
+                    width: 15%;
+                    font-size: 16px;
+                    font-weight: bold;
+                    li {
+                        list-style-type: none;
+                        padding-left: 2.5%;
+                    }
+                }
+            .tutorialMain {
+                float: right;
+                width: 85%;
+                margin-top: 4rem;   
+            }
+            #getStartedTutorial {
+                    li {
+                        width: 70%;
+                        margin: 0 15%;
+                    }
+                }
+            main {
+                
+
+                
             }
             footer {
             	li {
@@ -312,4 +410,6 @@ html {
 }
 
 //large screen styles
-@media only screen and (min-width: 1140px) {}
+@media only screen and (min-width: 1140px) {
+
+}
