Adjust contact form

--- a/components/layouts/default.html
+++ b/components/layouts/default.html
@@ -60,7 +60,7 @@
 			</ul>
 		</div>
 		<div id="contact" class="col5">
-			<form name="Form" action="contact.php" method="post">
+			<form method="post" name="Form" action="contact.php">
 				<label for="name">Name</label>
 				<input type="text" name="name" required>
 				<label for="email" id="email">Email</label>
