remove npm dowload instructions

--- a/components/layouts/default.html
+++ b/components/layouts/default.html
@@ -28,19 +28,19 @@
 			<a href="%index.html"><img src="%img/minframeLogoInverse.png" alt="minframe Logo"></a>
 			<i onClick="slideIn()" class="fa fa-bars"></i>
 			<ul id="menu">				
-				<li><a href="#getStarted">Get Started</a></li>
+				<li><a href="index.html#getStarted">Get Started</a></li>
 				<li><a href="%tutorial.html">Tutorial</a></li>
 				<li><a href="https://github.com/joshboyan/minframe" target="_blank">Github</a></li>
-				<li><a href="#">npm</a></li>
+				<li><a href="https://www.npmjs.com/~joshboyan">npm</a></li>
 				<li><a href="#contact">Contact</a></li>
 			</ul>
 			</div>
 			<ul id="mobileMenu">
 				<li><i onClick="slideOut()" class="fa fa-times"></i></li>
-				<li><a onClick="slideOut()" href="#getStarted">Get Started</a></li>
+				<li><a onClick="slideOut()" href="index.html#getStarted">Get Started</a></li>
 				<li><a href="%tutorial.html">Tutorial</a></li>
 				<li><a href="https://github.com/joshboyan/minframe" target="_blank">Github</a></li>
-				<li><a href="#">npm</a></li>
+				<li><a href="https://www.npmjs.com/~joshboyan">npm</a></li>
 				<li><a onClick="slideOut()" href="#contact">Contact</a></li>
 			</ul>
 		</nav>
@@ -67,10 +67,10 @@
 				<input type="text" name="email"  required>
 				<label for="subject">What's Up?</label>
 				<select name="subject">
-  				<option value="help">Build me a site!</option>
-  				<option value="suggestion">I have a suggestion.</option>
-  				<option value="question">I have a question.</option>
-  				<option value="issue">I found an issue.</option>
+  				<option value="Build me a Site!">Build me a site!</option>
+  				<option value="I have a suggestion.">I have a suggestion.</option>
+  				<option value="I have a question.">I have a question.</option>
+  				<option value="I found an issue.">I found an issue.</option>
 				</select>
 				<label for="message">Tell me more...</label>
 				<textarea name="message" rows="5" required></textarea>
