--- a/components/pages/tutorial.html
+++ b/components/pages/tutorial.html
@@ -80,8 +80,8 @@ description: This tutorial is a step by step, basic introduction to minframe, fr
 		<li>Open your terminal and navigate to where you would like to download the package.<br>
 			<code>cd desktop</code>
 		</li>
-		<li>Install minframe<br>
-			<code>npm install minframe</code>
+		<li>Download minframe<br>
+			<code>git clone https://github.com/joshboyan/minframe.git</code>
 		</li>
 		<li>Change directories into the package you just installed.<br>
 			<code>cd minframe</code>
