Edit get started instruction

--- a/components/pages/tutorial.html
+++ b/components/pages/tutorial.html
@@ -85,13 +85,17 @@ description: This tutorial is a step by step, basic introduction to minframe, fr
 		</li>
 		<li>Change directories into the package you just installed.<br>
 			<code>cd minframe</code>
-		</li>
+		<li>Change the GitHub remote repository to one you own.<br>
+			<code>git remote set-url origin https://github.com/USERNAME/OTHERREPOSITORY.git</code></li>
+		<li>Verify the remote URL has changed.<br>
+			<code>git remote -v</code></li>
 		<li>Install the node_module dependencies.<br>
 			<code>npm install</code>
 		</li>
 		<li>Start up the automated build and open chrome with Live Reload.<br>
 			<code>gulp</code><br>
 		</li>
+		<li>Open _components_ folder with your favorite text editor and create HTML markup in _layouts_ and _pages_, add your Sass styles to _scss_ and JavaScript to _js_.</li>
 		<li>To stop the automated workflow tools, use:<br>
 			<code>ctr c OR cmd c</code>
 		</li>
